feat: add search input with button

--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
         <small class="app-subtitle">Recherchez un Pokémon par nom ou ID</small>
       </div>
     </div>
+
+    <div class="search-container">
+      <input
+        type="text"
+        name="search-input"
+        id="search-input"
+        autocomplete="off"
+        placeholder="Entrez un nom ou un ID de Pokemon"
+        required
+      />
+      <button id="search-button">Search</button>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
