feat: add animated placeholder with pikachu

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
         name="search-input"
         id="search-input"
         autocomplete="off"
-        placeholder="Entrez un nom ou un ID de Pokemon"
+        placeholder=""
         required
       />
+      <span id="placeholder-text"></span>
       <button id="search-button">Search</button>
     </div>
     <script src="script.js"></script>
