feat: add autocomplete functionality for Pokémon search

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         />
         <span id="placeholder-text"></span>
         <button id="search-button">Search</button>
+        <div id="autocomplete-container"></div>
       </div>
 
       <div class="pokemon-card hidden" id="info-container">
