--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
       rel="stylesheet"
@@ -26,6 +26,7 @@
           placeholder=""
           required
         />
+        <div class="loading-spinner" id="loading-spinner"></div>
         <span id="placeholder-text"></span>
         <button id="search-button"><i class="fas fa-search"></i></button>
         <div id="autocomplete-container"></div>
@@ -103,6 +104,6 @@
       </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
